Agregando el programa de pilas con apuntadores

--- a/02 - Pilas con Pointers/02 - Pilas con Pointers.vcxproj
+++ b/02 - Pilas con Pointers/02 - Pilas con Pointers.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{64ee6852-91fc-4dec-8123-423425466051}</ProjectGuid>
+    <ProjectGuid>{f1252a68-8225-4150-b918-667bd780abe2}</ProjectGuid>
     <RootNamespace>My02PilasconPointers</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
