--- a/02 - Pilas con Pointers/02 - Pilas con Pointers.vcxproj.filters
+++ b/02 - Pilas con Pointers/02 - Pilas con Pointers.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
 </Project>
